# tapu-simu

./: .gitignore  ABILITIES_ITEMS_MOVES_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  CLAUDE.md  CODE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_POKE_ENGINE_TEST_EXTRACTION.md  Cargo.toml  IDENTIFIER_CLEANUP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_PLAN.md  MOVE_IMPLEMENTATION_GUIDE.md  MOVE_REFACTOR_DESIGN.md  README.md  SHOWDOWN_RUST_PORT_PLAN.md  TEST_PORTING_PLAN.md  package-lock.json  package.json  test_annihilape.rs  test_battle_flow.rs  test_extraction.txt  test_previous_turn_fix.py  test_switch_fix.py  test_type_effectiveness.rs  type_effectiveness_test.rs
docs/: DAMAGE_CALC_PARITY.md  HLD_V2_Architecture.md  IMPLEMENTATION_PLAN.md  IMPLEMENTED_ABILITIES_POKE_ENGINE.md  INSTRUCTION_SYSTEM.md  ITEM_PARITY_CHECKLIST.md  MOVES_TO_IMPLEMENT.md  PS_Integration_Demo.md  PS_Integration_Refactoring.md  PS_Integration_Summary.md  PS_Target_Mapping.md  TESTING_UI.md  TEST_FRAMEWORK.md  V2_Battle_Mechanics_Test_Plan.md  architecture-reference.md  builders-module.md  config-module.md  constants-module.md  core-module.md  damage-calc-migration.md  data-module.md  engine-module.md  simulator-module.md  testing-module.md  types-module.md
examples/: easy_pokemon_creation.rs  factory_methods_showcase.rs  generation_data_demo.rs  pokemon_factory_guide.md  ps_data_demo.rs  ps_drain_recoil_demo.rs  random_team_test.rs  simple_factory_demo.rs  test_battle_flow.rs
scripts/: extract_abilities.js  extract_items.js  extract_moves.js  extract_moves.ts  extract_moves_direct.js  extract_moves_esbuild.js  extract_moves_full.js  extract_ps_data.js  temp_extract.js
src/: action_queue.rs  battle.rs  battle_format.rs  battle_state.rs  config.rs  constants.rs  errors.rs  format.rs  generation.rs  instruction.rs  io.rs  lib.rs  main.rs  move_choice.rs  pokemon.rs  prng.rs  side.rs  simulator.rs  state.rs  test_framework.rs  testing.rs  utils.rs
tests/: accuracy_miss.rs  basic_damage.rs  damage_roll_test.rs  framework_test.rs  move_categories.rs  move_prevention.rs  secondary_effects.rs  test_abilities.rs  test_accuracy_checking.rs  test_additional_move_implementations.rs.disabled  test_advanced_abilities.rs  test_advanced_abilities.rs.disabled  test_advanced_ability_integration.rs  test_all_instructions.rs  test_all_instructions.rs.disabled  test_all_instructions_part2.rs  test_all_instructions_part2.rs.disabled  test_battle_environment.rs  test_battle_environment.rs.disabled  test_battle_flow.rs  test_battle_mechanics_singles.rs  test_core_battle_mechanics.rs  test_core_battle_mechanics.rs.disabled  test_counter_moves.rs.disabled  test_end_of_turn_effects.rs  test_end_of_turn_effects.rs.disabled  test_event_integration.rs  test_fling_implementation.rs.disabled  test_instruction_generation_integration.rs  test_instruction_generation_integration.rs.disabled  test_item_attribution.rs  test_item_attribution.rs.disabled  test_item_system.rs  test_item_system.rs.disabled  test_missing_moves.rs.disabled  test_move_execution.rs  test_new_end_of_turn_effects.rs  test_new_moves.rs.disabled  (+18 more)
(+294 files in other folders)
