[package]
name = "tapu-simu"
version = "0.1.0"
authors = ["Mingu Kim <mingu@example.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Tapu Simu - Format-aware Pokemon battle simulator"

[lib]
name = "tapu_simu"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "tapu-simu"
path = "src/main.rs"




[profile.release]
debug = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.4"
lazy_static = "1.4.0"
deunicode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
colored = "3.0.0"
rayon = "1.7"
bitflags = "2.4"
smallvec = { version = "1.11", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

# No compile-time features - everything handled at runtime

[workspace]
